[QOLDEV-62] fix spacing between radio and label
- Keep radio/checkbox position as 'static' even if wrapped in 'questions' and 'choices' elements

--- a/src/assets/_project/_blocks/components/forms/_qg-forms.scss
+++ b/src/assets/_project/_blocks/components/forms/_qg-forms.scss
@@ -273,6 +273,7 @@
       appearance: none;
       @include qg-button-outline-decoration(grid);
       border: solid $qg-pagination-border 2px;
+      position: static;
       &:disabled {
         border-color: $qg-dark-grey-lightest;
         &::before {
